# Graphic_lab_task

./: .gitignore  CMakeGraphVizOptions.cmake  CMakeLists.txt  LICENSE  README.md  imgui.ini  litert.cmake
CrossRT/: CMakeLists.txt  CrossRT.h  EmbreeRT.cpp  VulkanRTX.cpp
HydraRenderer/: CMakeLists.txt  gltf_structure.h  gltf_structure_writer.cpp  gltf_writer.h  renderer.cpp  renderer.h  renderer_stub.cpp  scene.cpp  scene.h  scene_stub.cpp
LiteApp/: CMakeLists.txt  lite_app.cpp  lite_app.h  lite_app_imgui.cpp  lite_app_imgui.h
LiteApp/rasterization/: IRasterizer.cpp  IRasterizer.h  SimpleRasterizer.cpp  SimpleRasterizer.h  context.cpp  context.h  vk_buffer_helpers.cpp  vk_buffer_helpers.h
LiteScene/: CMakeLists.txt  hydraxml.cpp  hydraxml.h  loadutil.h  scene.h  scene_common.h  scene_convert.cpp  scene_mat.cpp  scene_mgr.h  scene_tex.cpp
MultiRenderer/: BVH2Common.cpp  BVH2Common.h  BVH2Common_host.cpp  CMakeLists.txt  MultiRenderer.cpp  MultiRenderer.h  MultiRenderer_host.cpp  MultiRenderer_resolve.cpp  MultiRenderer_slang_comp.cpp  MultiRenderer_slang_comp.h  MultiRenderer_slang_comp_ds.cpp  MultiRenderer_slang_comp_init.cpp  MultiRenderer_slang_comp_rq.cpp  MultiRenderer_slang_comp_rq.h  MultiRenderer_slang_comp_rq_ds.cpp  MultiRenderer_slang_comp_rq_init.cpp  app_renderer.cpp  app_renderer.h  bvh_info.cpp  bvh_info.h
MultiRenderer/shaders_slang_comp/: common_slang_comp_slang.h  kernel1D_AverageColor.slang  kernel1D_FillGbuffer.comp.spv  kernel1D_FillGbuffer.slang  kernel1D_FillGbufferWithTransparency.comp.spv  kernel1D_FillGbufferWithTransparency.slang  kernel1D_ResolveCTF.comp.spv  kernel1D_ResolveCTF.slang  kernel1D_ResolveCommon.comp.spv  kernel1D_ResolveCommon.slang  kernel1D_ResolveCommonWithTransparency.comp.spv  kernel1D_ResolveCommonWithTransparency.slang  kernel1D_ResolveDebug.comp.spv  kernel1D_ResolveDebug.slang  kernel1D_ResolveOutline.comp.spv  kernel1D_ResolveOutline.slang  kernel1D_Tonemap.slang  kernel2D_PackXY.comp.spv  kernel2D_PackXY.slang
MultiRenderer/shaders_slang_comp_rq/: build_slang.sh  common_slang_comp_rq_slang.h  kernel1D_AverageColor.comp.spv  kernel1D_AverageColor.slang  kernel1D_FillGbuffer.comp.spv  kernel1D_FillGbuffer.slang  kernel1D_FillGbufferWithTransparency.comp.spv  kernel1D_FillGbufferWithTransparency.slang  kernel1D_ResolveCTF.comp.spv  kernel1D_ResolveCTF.slang  kernel1D_ResolveCommon.comp.spv  kernel1D_ResolveCommon.slang  kernel1D_ResolveCommonWithTransparency.comp.spv  kernel1D_ResolveCommonWithTransparency.slang  kernel1D_ResolveDebug.comp.spv  kernel1D_ResolveDebug.slang  kernel1D_ResolveOutline.comp.spv  kernel1D_ResolveOutline.slang  kernel1D_Tonemap.slang  kernel2D_PackXY.comp.spv  kernel2D_PackXY.slang
PostEffects/antialiasing/: Antialiaser_slang.cpp  Antialiaser_slang.h  Antialiaser_slang_ds.cpp  Antialiaser_slang_init.cpp  CMakeLists.txt  antialiaser.cpp  antialiaser.h
PostEffects/image_metrics/: CMakeLists.txt  ImgMetricsKernel_glsl.cpp  ImgMetricsKernel_glsl.h  ImgMetricsKernel_glsl_ds.cpp  ImgMetricsKernel_glsl_init.cpp  image_metrics.cpp  image_metrics.h
VolumeRenderer/: CMakeLists.txt  VolumeRenderer.cpp  VolumeRenderer.h  VolumeRenderer_enums.cpp  VolumeRenderer_enums.h  VolumeRenderer_host.cpp  VolumeRenderer_slang.cpp  VolumeRenderer_slang.h  VolumeRenderer_slang_ds.cpp  VolumeRenderer_slang_init.cpp  scene_extension_volume.h  sparse_octree_density_grid.cpp  sparse_octree_density_grid.h
VolumeRenderer/shaders_slang/: build_slang.sh  common_slang_slang.h  kernel1D_AverageColor.slang  kernel1D_RaymarchDAG.comp.spv  kernel1D_RaymarchDAG.slang  kernel1D_RaymarchDAG4D.comp.spv  kernel1D_RaymarchDAG4D.slang  kernel1D_RaymarchGrid_Bresenham.comp.spv  kernel1D_RaymarchGrid_Bresenham.slang  kernel1D_RaymarchGrid_DDA.comp.spv  kernel1D_RaymarchGrid_DDA.slang  kernel1D_RaymarchGrid_DDA_Branchless.comp.spv  kernel1D_RaymarchGrid_DDA_Branchless.slang  kernel1D_RaymarchSCom.comp.spv  kernel1D_RaymarchSCom.slang  kernel1D_RaymarchSCom4D.comp.spv  kernel1D_RaymarchSCom4D.slang  kernel1D_RaytraceGrid_SS.comp.spv  kernel1D_RaytraceGrid_SS.slang  kernel1D_Tonemap.slang  kernel2D_PackXY.comp.spv  kernel2D_PackXY.slang
VoxelRenderer/: CMakeLists.txt  VoxelRenderer.cpp  VoxelRenderer.h  VoxelRenderer_host.cpp  VoxelRenderer_slang.cpp  VoxelRenderer_slang.h  VoxelRenderer_slang_ds.cpp  VoxelRenderer_slang_init.cpp  cave_generator.cpp  cave_generator.h  mesh_voxelizer.h  mesh_voxelizer_svo.cpp  minecraft_blocks.h  procedural_voxel_grid.cpp  procedural_voxel_grid.h  scene_extension_voxel.h  voxel_dag.cpp  voxel_dag.h  voxel_octree.cpp  voxel_octree.h  voxel_octree_internal.h
VoxelRenderer/shaders_slang/: build_slang.sh  common_slang_slang.h  kernel1D_AverageColor.comp.spv  kernel1D_AverageColor.slang  kernel1D_IntersectDAG.comp.spv  kernel1D_IntersectDAG.slang  kernel1D_IntersectSCom.comp.spv  kernel1D_IntersectSCom.slang  kernel1D_IntersectSVO.comp.spv  (+7 more)
core/: CMakeLists.txt  ICAERenderer.h  IRenderer.h  ISceneObject.h  ISimpleCombinedRenderer.h  ISimpleCombinedRenderer_host.cpp  ISimpleCombinedRenderer_shared.cpp  render_settings.h  scene_extension.cpp  scene_extension.h  serialization.cpp  serialization.h
demo_app/: CMakeLists.txt  IRenderPlugin.h  app.cpp  app.h  app_execute_commands.cpp  app_internal.h  command_buffer.h  main.cpp  render_raytracing.cpp
dependencies/: CMakeLists.txt  KTX.cmake  LiteMath.cmake  OffsetAllocator.cmake  SimplexNoise.cmake  blk.cmake  clipper2.cmake  embree3.cmake  flip.cmake  glfw.cmake  igl.cmake  manifold.cmake  miniz.cmake  nlohmann_json.cmake  pugixml.cmake  stb_image.cmake  tbb.cmake  tiny_gltf.cmake  tiny_obj_loader.cmake  tinyexr.cmake  vkutils.cmake  webgpu.cmake
imgui_integration/: CMakeLists.txt
render_CLI/: CMakeLists.txt  brick_dataset_generator.cpp  brick_dataset_generator.h  demos_scom.cpp  demos_scom.h  lsa_map_generator.cpp  lsa_map_generator.h  main.cpp  merge_scenes.cpp  merge_scenes.h  model_check.cpp  model_check.h  offscreen_render.cpp  offscreen_render.h  scom2_packing_sandbox.cpp  scom2_packing_sandbox.h
sdf/: CMakeLists.txt
utils/: CMakeLists.txt
(+365 files in other folders)
